--- a/src/App.css
+++ b/src/App.css
@@ -1,81 +1,62 @@
-/* App.css */
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+.App {
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100%;
+    max-height: none !important;
+    display: flex;
+    flex-direction: column;
 }
 
-.chat-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+/* ScrollBar CSS */
+
+::-webkit-scrollbar-track {
+    background-color: rgba(237, 240, 242, 0.5);
+    border-radius: 5px;
 }
 
-.chat-box {
-  width: 80%;
-  max-width: 600px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  margin-bottom: 20px;
+::-webkit-scrollbar {
+    width: 4px;
+    height: 8px;
+    background-color: rgb(240, 240, 240);
+    border-radius: 5px;
 }
 
-.message {
-  padding: 10px 20px;
-  margin: 10px 0;
-  border-radius: 5px;
+::-webkit-scrollbar-thumb {
+    background-color: rgb(190, 190, 190);
+    border-radius: 5px;
 }
 
-.user {
-  background-color: #007bff;
-  color: #fff;
-  align-self: flex-end;
+/* Loader */
+
+.dot {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    display: inline-block;
+    animation: dot-keyframes 1.4s infinite;
 }
 
-.bot {
-  background-color: #6c757d;
-  color: #fff;
-  align-self: flex-start;
+.dot:nth-child(1) {
+    animation-delay: 0.2s;
 }
 
-.input-box {
-  display: flex;
-  width: 80%;
-  max-width: 600px;
+.dot:nth-child(2) {
+    animation-delay: 0.4s;
 }
 
-input[type="text"] {
-  flex: 1;
-  padding: 10px;
-  border: none;
-  border-radius: 5px 0 0 5px;
-  font-size: 16px;
+.dot:nth-child(3) {
+    animation-delay: 0.6s;
 }
 
-button {
-  padding: 10px 20px;
-  border: none;
-  background-color: #007bff;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+@keyframes dot-keyframes {
 
-button:hover {
-  background-color: #0056b3;
-}
+    0%,
+    80%,
+    100% {
+        transform: scale(0);
+    }
 
-input[type="text"],
-button {
-  outline: none;
+    40% {
+        transform: scale(1);
+    }
 }
-
-input[type="text"]::placeholder {
-  color: #aaa;
-}
-
